# mm

./: .gitignore  README.md  go.mod  go.sum  justfile  lefthook.yml
cmd/: mm.go
internal/code/: finder.go  parser.go  parser_test.go
internal/embedding/: indexer.go
internal/embedding/python/: README.md  cache_model.py  chroma_manager.py  indexer.py  pyproject.toml  query.py  sandbox.py  test_indexer.py
internal/set/: set.go
internal/worker/: worker.go
python/: indexer.py  pyproject.toml  test_indexer.py
